# unlocr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README_zh.md  deny.toml  install.sh  release.sh  uninstall.sh
.agents/: AGENTS.md
.cargo/: audit.toml
.github/workflows/: audit.yml  build-llama.yml  ci.yml  publish-crate.yml  release-gui.yml  release.yml  update-tap.yml
colab/: unlocr-deepseek-ocr-gpu.ipynb  unlocr-deepseek-ocr-gpu_zh.ipynb
docs/: CLI.md  CLI_zh.md  RELEASE.md
gui/: CLAUDE.md  README.md
gui/src/: board.js  file_rail.js  formats.js  index.html  input_folder.js  job_card.js  jobs.js  library.js  main.js  markdown_pane.js  model.js  ocr-events.js  options.js  panes.js  paths.js  pdf_password.js  preview_pane.js  quick_settings.js  rail.js  run.js  run_ocr.js  settings.js  styles.css  tauri.js  toasts.js  ui.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: cmd_model.rs  cmd_run.rs  cmd_store.rs  db.rs  jsonstore.rs  lib.rs  notifications.rs  settings.rs  state.rs  store.rs
gui/src-tauri/src/cmd_model/: cache.rs  mod.rs  sysreq.rs
gui/src-tauri/src/cmd_run/: fs.rs  mod.rs  ocr.rs  render.rs  scan.rs  tools.rs
gui/src-tauri/src/cmd_run/ocr/: types.rs  validation.rs  worker.rs
gui/src-tauri/src/store/: db.rs  helpers.rs  mod.rs  tests.rs  types.rs
gui/src/assets/: i18n.js
gui/src/locales/: en.json  ja.json  ko.json  zh.json
packaging/: README.md
packaging/deb/: build-deb.sh
packaging/homebrew/: unlocr-cask.rb  unlocr.rb
packaging/rpm/: build-rpm.sh  unlocr.spec
packaging/windows/: install.ps1  uninstall.ps1
schemas/: SCHEMA.md
src/: cli_args.rs  inputs.rs  job.rs  lib.rs  lib_tests.rs  main.rs  main_tests.rs  model.rs  ocr.rs  options.rs  output.rs  pdf.rs  preflight.rs  preview.rs  server.rs  tools.rs
src/model/: download.rs  mod.rs  tests.rs
src/preflight/: hints.rs  sysreq.rs  system.rs
src/server/: local.rs  mlx.rs  mod.rs  remote.rs  tests.rs
src/tools/: mod.rs  tests.rs
unlocr/: Cargo.toml
unlocr/src/: main.rs  model.rs  ocr.rs  preflight.rs  server.rs
