[package]
name = "unlocr"
version.workspace = true   # single source of truth: [workspace.package] below
edition = "2021"
description = "OCR PDFs to markdown via Unlimited-OCR (DeepSeek-OCR) + llama.cpp"
license = "MIT"
repository = "https://github.com/whit3rabbit/unlocr"
readme = "README.md"
keywords = ["ocr", "pdf", "llama", "deepseek", "markdown"]
categories = ["command-line-utilities", "text-processing"]
# MIT covers this code only. The downloaded model weights (Unlimited-OCR /
# DeepSeek-OCR GGUF) carry their own license; see the HF model card in README.
# The gui crate stays publish = false; only this root crate goes to crates.io.

# Library target so the OCR backend (model/ocr/pdf/preflight/server + the clap-free
# run_ocr_job / OcrOptions API in lib.rs) is callable from the Tauri host crate and
# from tests without going through the CLI. Additive: the bin target (main.rs) and
# its release profile are untouched, and main.rs still owns Args/clap parsing.
[lib]
name = "unlocr"
path = "src/lib.rs"

# Workspace root. NOTE: with a root package plus `[workspace]` and no
# `default-members`, a bare `cargo build`/`cargo test` at the repo root builds the
# root package (the CLI) ONLY, not the members. The Tauri gui crate compiles only
# under `cargo build --workspace` or from inside `gui/src-tauri`. (Release CI relies
# on this: `cargo build --manifest-path Cargo.toml` builds just the CLI, so the
# musl runner never has to pull in Tauri's system deps.)
[workspace]
resolver = "2"
members = ["gui/src-tauri"]

# THE version. Bump here on release; the CLI (clap `version` -> CARGO_PKG_VERSION),
# the gui crate (version.workspace), and the Tauri bundle (tauri.conf.json has no
# `version`, so it falls back to the gui crate's Cargo.toml) all derive from this.
# release.sh + Makefile read this line via sed.
[workspace.package]
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }   # pin 2.x: rustls default, no system OpenSSL
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"   # verify downloaded GGUFs against pinned sha256 digests (supply-chain)
tempfile = "3"
glob = "0.3"   # in-binary glob expansion (PowerShell does not glob unquoted args)
# Extract the Windows tool zips (pandoc/poppler/llama-server) fetched on demand by
# src/tools.rs. default-features off: these are plain deflate archives, so skip the
# bzip2/zstd/aes backends and their C deps.
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"   # small binary; this is a thin wrapper, not the hot path
lto = true
strip = true
codegen-units = 1
panic = "abort"
